--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "next": "15.5.3",
-    "next-intl": "^4.3.9",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
